# Cpp_py

./: CMakeLists.txt
doc/: mind.md
src/cpp/: add.cpp
src/py/: test.py
